# zoom-ai-civic-voice-digest

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: article-outline.md  experiment-log.md  implementation-plan.md  project-context.md  qiita-draft.md  sources.md
mockups/: index.html
src/civic_voice_digest/: __init__.py  cli.py  pipeline.py
