[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civic-voice-digest"
version = "0.1.0"
description = "Create multilingual digests from public civic voice bulletins with Zoom AI Services."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
]

[project.scripts]
civic-voice-digest = "civic_voice_digest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
